--- a/app/src/main/res/layout/activity_registation.xml
+++ b/app/src/main/res/layout/activity_registation.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     android:layout_height="match_parent"
     android:padding="24dp">
 
@@ -17,7 +17,7 @@
         android:layout_marginTop="72dp"
         android:text="Register Now"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="44sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +41,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etName"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName" />
@@ -60,6 +61,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEmail"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress" />
@@ -72,6 +74,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         app:boxStrokeColor="@color/black"
+        app:errorTextColor="@color/white"
         app:boxBackgroundMode="outline"
         app:endIconMode="password_toggle"
         android:layout_marginTop="8dp"
@@ -81,6 +84,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword" />
@@ -107,6 +111,7 @@
         android:layout_marginStart="68dp"
         android:layout_marginTop="64dp"
         android:paddingTop="16dp"
+        android:textColor="@color/white"
         android:text="Already have an account?"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnregister" />
@@ -119,7 +124,7 @@
         android:layout_marginTop="64dp"
         android:paddingTop="16dp"
         android:text="Login"
-        android:textColor="@color/black"
+        android:textColor="#00B8D4"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tvResult"
         app:layout_constraintTop_toBottomOf="@id/btnregister" />
